--- a/x.html
+++ b/x.html
@@ -58,6 +58,7 @@
 <head>
     <link rel="icon" href="kulll/perra.ico">
     <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" type="text/css" href=style.css"/>	
     <title> Informatica </title>
 </head>
 
